--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,19 @@
+stages:
+  - build
+  - test
+  - deploy
+
 build:
   stage: build
+  script: 
+    - node -- check app.js
+
+test:
+  stage: test 
   script:
-    - echo "Building my project" 
+    - echo "test test"
+deploy:
+  stage: deploy
+  script:
+    - echo "test deploy" 
+
